# MicroManipulatorStepper

./: .gitignore  README.md
construction/micro_manipulator/: Assembly_Actuator.FCStd  Assembly_BallJointPlate.FCStd  Assembly_EndEffector.FCStd  Assembly_LinkageUnit.FCStd  Assembly_MicroManipulator.FCStd  BallJointPlate.FCStd  BaseBlock.FCStd  CrimpBead.FCStd  EncoderMagnet.FCStd  EncoderMagnetArray.FCStd  EndEffector.FCStd  JointBall.FCStd  LinkageRod.FCStd  MT6835.FCStd  MotorHorn.FCStd  MotorMount.FCStd  RubberBand.FCStd  RubberBandCollet.FCStd  StepperMotorNema17.FCStd
documentation/setup_guide/: setup_guide.md
electronics/control_board/: .gitignore  ControlBoard_v1.kicad_pcb  ControlBoard_v1.kicad_pro  ControlBoard_v1.kicad_sch  VersionHistory.txt  fp-lib-table  sym-lib-table
electronics/heater_pcb/: heater_pcb.kicad_pcb  heater_pcb.kicad_pro  heater_pcb.kicad_sch
electronics/rot_platform_pcb/: fp-lib-table  mx1508_mx1616.kicad_sym  (+3 more)
rot_platform_pcb/: rot_platform_pcb.kicad_pro  rot_platform_pcb.step
rotation-stage-controller/: platformio.ini
software/PythonAPI/: .gitignore  LICENSE  backup_logs.txt  logs.txt  new_logs.txt  new_real_logs.txt  new_real_real_logs_with_better_mp.txt  output_0.csv  output_1.csv  output_2.csv  pyproject.toml  thing_logs.txt
software/PythonAPI/examples/: camera_comparer.py  loop_example.py  usage_example.py
software/PythonAPI/examples/image_comparer/: detector.py
software/PythonAPI/open_micro_stage_api/: __init__.py  __main__.py  api.py  calibration_plotter.py
software/PythonAPI/tests/: __init__.py  test_open_micro_stage.py
(+97 files in other folders)
